<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".student_form"
    android:orientation="vertical"
    android:background="#E4DFDE">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/gpa"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/t2edtemail"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/border_"
        android:ems="10"
        android:hint="@string/abc_email_com"
        android:inputType="textPersonName|textEmailSubject"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/t2edtname"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/t2edtsemester"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/border_"
        android:ems="10"

        android:hint="@string/_6th"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/t2edtcell"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/t2edtname"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border_"
        android:ems="10"

        android:hint="@string/nam"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="356dp"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/student_information_form"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/name"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="56dp"
        android:text="@string/email"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:text="@string/cell"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="122dp"
        android:layout_height="40dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/semester"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/t2edtgpa"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/border_"
        android:ems="10"

        android:hint="@string/_4_0"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/t2edtsemester"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/send_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:text="@string/send"
        android:onClick="Send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2edtgpa" />

    <EditText
        android:id="@+id/t2edtcell"
        android:layout_width="128dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/border_"
        android:ems="10"
        android:hint="@string/_123456789"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/t2edtemail"
        tools:ignore="SpeakableTextPresentCheck,TextContrastCheck,TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>